feat: Fix AI issues, adjust Astro API spec, update Swagger UI to Rapidoc
